# hro-ai-safety-evaluation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md  cli.py  inspect_plugin.py  inspect_scorer.py  pyproject.toml  requirements.txt
baselines/: llm_judge_v2.py
classifier/: classify.py  pre_filter.py
demo/: hro_demo.ipynb
examples/: simple_agent_trace.json
experiment/: README.md  deception_comparison.py  deception_results.json  evaluate_against_ground_truth.py  fail_fast_results.json  real_incident_analysis.py  results.json  session_analysis.py
generator/: generate.py
hro_safety_eval/: cli.py  monitor.py
logs/: 2026-05-30T10-06-49-00-00_hro-test-task_PNBdbaM78c9RmcevVEd3Hs.eval  2026-05-30T10-09-25-00-00_hro-test-task_Ew7oeZK6Psqkh5tReNjpHd.eval  2026-05-30T10-36-59-00-00_deceptive-compliance-task_f8T3URLoDNJfu3G9bmxy6K.eval  2026-05-30T12-17-34-00-00_mistral-deceptive-task_HxAYGCsL4wiocDtwdTjR7Q.eval
poc/: atbench_mock.py  atbench_raw.json  atbench_real.json  atbench_results.json  fetch_atbench.py  hro_poc_demo.ipynb  run_atbench_poc.py
reports/: atbench_results.json  exporter.py  ground_truth_evaluation.json  inspect_real_calibration.json  keyword_probe_atbench_results.json  live_stream.jsonl  llm_judge_atbench_results.json  llm_judge_v2_results.json  report_20260527_231040.json  report_20260530_103037.json  report_20260601_090020.json  risk_trajectory_analysis.json  safetydrift_full.json  safetydrift_hro_full.json  safetydrift_results_for_authors.md  session_analysis.py  threshold_calibration.json
scorer/: hro_scorer.py
(+116 files in other folders)
